feat: impls HTTP method rest/graphql and refactors microfront
