# apps/nest-graphql/src/controllers/resident-location/dto/delete-resident-location-response.ts
@@ -1,0 +1,7 @@
+import { ObjectType, Field, Int } from "@nestjs/graphql";
+
+@ObjectType()
+export class DeleteResidentLocationResponse {
+    @Field(() => Int)
+    data!: number;
+}
