# apps/nest-graphql/src/controllers/resident-location/resident-location.repository.ts
@@ -3,6 +3,7 @@ import { InjectDataSource, InjectRepository, TypeOrmDataSourceFactory } from '@n
 import { Repository } from 'typeorm'
 import { ResidentLocation } from './entities/resident-location.entity';
 import { ResidentLocationInput } from './entities/resident-location-input.entity';
+import { DeleteResult } from 'typeorm/browser';
 
 @Injectable()
 export class ResidentLocationRepository {
@@ -36,5 +37,30 @@ export class ResidentLocationRepository {
         });
 
         return this.residentLocationRepository.save(entity); 
+    }
+
+    async update(id: number, residentLocatoinData: ResidentLocationInput): Promise<ResidentLocation | undefined> {
+        const entity = await this.residentLocationRepository.findOneBy({ id });
+        
+        if (!entity) {
+            return undefined
+        }
+
+        const merged = this.residentLocationRepository.merge(entity, {
+            country: residentLocatoinData.country,
+            city: residentLocatoinData.city,
+            postalCode: residentLocatoinData.postalCode,
+            street: residentLocatoinData.street,
+            house: residentLocatoinData.house,
+            apartment: residentLocatoinData.apartment,
+        });
+
+        return this.residentLocationRepository.save(merged);
+    }
+
+    async delete(id: number): Promise<DeleteResult> {
+        return this.residentLocationRepository.delete({
+            id: id
+        });
     }
 }
