# apps/react-resident/src/lib/types/api.ts
@@ -10,22 +10,42 @@
  * ---------------------------------------------------------------
  */
 
-export interface FlattyBudgetGoApiHttpDtoCountResponse {
+export interface DtoCountResponse {
   /** @example 138 */
   total: number;
 }
 
-export interface FlattyBudgetGoApiHttpDtoHealthResponse {
+export interface DtoCreateResidentLocationRequest {
+  /** @example "2" */
+  apartment: string;
+  /** @example "Warsaw" */
+  city: string;
+  /** @example "Poland" */
+  country: string;
+  /** @example "1" */
+  house: string;
+  /** @example "00-945" */
+  postal_code: string;
+  /** @example "Bobr" */
+  street: string;
+}
+
+export interface DtoDeleteResidentLocationResponse {
+  /** @example 1 */
+  data: number;
+}
+
+export interface DtoHealthResponse {
   /** @example "ok" */
   status: string;
 }
 
-export interface FlattyBudgetGoApiHttpDtoListResidentLocationResponse {
-  data: FlattyBudgetGoApiHttpDtoResidentLocationResponse[];
+export interface DtoListResidentLocationResponse {
+  data: DtoResidentLocationResponse[];
   total: number;
 }
 
-export interface FlattyBudgetGoApiHttpDtoResidentLocationResponse {
+export interface DtoResidentLocationResponse {
   /** @example "2" */
   apartment: string;
   /** @example "Warsaw" */
@@ -46,7 +66,22 @@ export interface FlattyBudgetGoApiHttpDtoResidentLocationResponse {
   updated_at: string;
 }
 
-export type HealthListData = FlattyBudgetGoApiHttpDtoHealthResponse;
+export interface DtoUpdateResidentLocationRequest {
+  /** @example "2" */
+  apartment: string;
+  /** @example "Warsaw" */
+  city: string;
+  /** @example "Poland" */
+  country: string;
+  /** @example "1" */
+  house: string;
+  /** @example "00-945" */
+  postal_code: string;
+  /** @example "Bobr" */
+  street: string;
+}
+
+export type HealthListData = DtoHealthResponse;
 
 export interface ResidentLocationListParams {
   /** Number of products to return (default 10) */
@@ -55,7 +90,22 @@ export interface ResidentLocationListParams {
   offset?: number;
 }
 
-export type ResidentLocationListData =
-  FlattyBudgetGoApiHttpDtoListResidentLocationResponse;
+export type ResidentLocationListData = DtoListResidentLocationResponse;
 
-export type CountListData = FlattyBudgetGoApiHttpDtoCountResponse;
+export type ResidentLocationCreateData = DtoResidentLocationResponse;
+
+export type CountListData = DtoCountResponse;
+
+export interface ResidentLocationUpdateParams {
+  /** Resident Location ID */
+  id: number;
+}
+
+export type ResidentLocationUpdateData = DtoResidentLocationResponse;
+
+export interface ResidentLocationDeleteParams {
+  /** Resident Location ID */
+  id: number;
+}
+
+export type ResidentLocationDeleteData = DtoDeleteResidentLocationResponse;
